Fix firefox popup alignments

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -2501,6 +2501,15 @@ ul.workspace-private-toolbar li.bulk-checkbox-item input {
     top: -172px;
 }
 
+/* Firefox */
+@-moz-document url-prefix() {
+    .workspace-private-toolbar .popover-help-container .popover {
+        left: -267px;
+        top: -155px;
+    }
+  }
+
+
 .work-bulk-actions .popover-help-container .bulk-works-privacy-popover {
     display: none;
     position: absolute;
